...
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="2GZ-Ze-s5s">
                                <rect key="frame" x="20" y="20" width="280" height="64"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bd0-nk-Jhd">
                                        <rect key="frame" x="0.0" y="0.0" width="132" height="64"/>
                                        <color key="backgroundColor" systemColor="systemGray5Color"/>
                                        <accessibility key="accessibilityConfiguration" identifier="number1"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Second Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dhr-GL-I8O">
                                        <rect key="frame" x="148" y="0.0" width="132" height="64"/>
                                        <color key="backgroundColor" systemColor="systemGray5Color"/>
                                        <accessibility key="accessibilityConfiguration" identifier="number2"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                    </textField>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="height" constant="64" id="59f-m4-EcV"/>
...
                                    <action selector="operationHandler:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PU2-cu-fVg"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Delay Time" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bdr-mk-Lw9">
                                <rect key="frame" x="100" y="104" width="120" height="64"/>
                                <color key="backgroundColor" red="0.052805574324982542" green="0.96595916717202346" blue="0.6517279362836641" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="delaySeconds"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="64" id="FJO-qT-hDa"/>
                                </constraints>
                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mi3-wl-w8l">
                                        <rect key="frame" x="130" y="50" width="0.0" height="27"/>
                                        <accessibility key="accessibilityConfiguration" identifier="result"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="27" id="2zB-Sx-Otj"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
...
                                    <constraint firstItem="qE7-Gg-MYp" firstAttribute="top" secondItem="SaN-c0-4vP" secondAttribute="bottom" constant="45" id="uFc-D4-E3q"/>
                                    <constraint firstItem="dOp-f7-yyO" firstAttribute="leading" secondItem="xea-5b-756" secondAttribute="leading" constant="8" id="z86-ub-Rov"/>
                                </constraints>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xjz-1b-zQe">
                                <rect key="frame" x="70" y="259" width="180" height="58"/>
                                <accessibility key="accessibilityConfiguration" identifier="calculate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="58" id="52e-bH-ifq"/>
                                    <constraint firstAttribute="width" constant="180" id="p67-pw-4dB"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                <state key="normal" title="Calculate"/>
...
